# tpl-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs
assets/: main.css
src/: app.rs  main.rs
